# oneup

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yaml
.github/workflows/: publish.yaml  tests.yaml
oneup/: __init__.py  cli.py  output.py  version_checks.py
tests/: __init__.py  test_cli.py  test_oneup.py  test_output.py  test_version_checks.py
tests/sample_files/: pyproject.toml  requirements.txt
tests/sample_files/poetry-order/: pyproject.toml
tests/sample_files/poetry2/: pyproject.toml
tests/sample_files/uv/: pyproject.toml
