[tool.poetry]
name = "oneup"
version = "0.7.0"
description = "A CLI tool to check for dependency updates for Python, in Python"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/aitorres/oneup"
keywords = [
    "python",
    "dependency updates",
    "pyproject",
    "requirements",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/oneup/issues"

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^1.1.0"
requests = "^2.32.3"
requirements-parser = "^0.11.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^4.1.0"
nodeenv = "1.9.1"
black = "^25.1.0"
isort = "^6.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
pylint = "^3.3.4"
types-termcolor = "^1.1.6.2"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.0.20241016"

[tool.isort]
src_paths = ["lancini", "test"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length=90

[tool.poetry.scripts]
oneup = 'oneup.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
